Fix code editor overflowing when there's a lotta code

--- a/demo/components/app/app.module.css
+++ b/demo/components/app/app.module.css
@@ -1,9 +1,10 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 50% 50%;
   grid-template-rows: 50px 1fr;
   width: 100vw;
   height: 100vh;
+  max-height: 100vh;
   gap: 8px;
 }
 
@@ -26,6 +27,7 @@
   grid-column: 1 / 2;
   padding-left: 8px;
   padding-bottom: 8px;
+  overflow: hidden;
 }
 
 .right {
