--- a/demo/components/editor/editor.module.css
+++ b/demo/components/editor/editor.module.css
@@ -1,5 +1,6 @@
 .container {
   flex: 1;
+  overflow-y: scroll;
 }
 
 :global(.cm-editor) {
